cmake_minimum_required(VERSION 3.5)
project(CodingInterview)

set(CMAKE_CXX_STANDARD 11)

add_executable(main main.cpp)
add_executable(01_AssignOperator 01_AssignOperator.cpp)
add_executable(02_Singleton 02_Singleton.cpp)
add_executable(03_DuplicateNumerInArray 03_DuplicateNumerInArray.cpp)
add_executable(04_FindInPartialllySortedMatrix 04_FindInPartialllySortedMatrix.cpp)
add_executable(05_ReplaceSpaces 05_ReplaceSpaces.cpp)
add_executable(06_PrintListFromTail 06_PrintListFromTail.cpp)
add_executable(07_ConstructBinaryTree 07_ConstructBinaryTree.cpp)
add_executable(08_NextNodeInBinaryTree 08_NextNodeInBinaryTree.cpp)
add_executable(09_QueueWithTwoStacks 09_QueueWithTwoStacks.cpp)
add_executable(09_StackWithTwoQueue 09_StackWithTwoQueue.cpp)
add_executable(10_Fibonacci 10_Fibonacci.cpp)
add_executable(11_MinNumberInRotateArray 11_MinNumberInRotateArray.cpp)
add_executable(12_StringPathInMatrix 12_StringPathInMatrix.cpp)
add_executable(13_RobotMove 13_RobotMove.cpp)
add_executable(14_CuttingRope 14_CuttingRope.cpp)
add_executable(15_NumberOfOneInBinary 15_NumberOfOneInBinary.cpp)
add_executable(16_Power 16_Power.cpp)
add_executable(17_PrintOneToMaxOfNDigits 17_PrintOneToMaxOfNDigits.cpp)
add_executable(18_DeleteNodeInList 18_DeleteNodeInList.cpp)
add_executable(19_RegularExpressionMatching 19_RegularExpressionMatching.cpp)
add_executable(20_NumericStrings 20_NumericStrings.cpp)
add_executable(21_RecorderArray 21_RecorderArray.cpp)
add_executable(22_KthNodeFromEnd 22_KthNodeFromEnd.cpp List.cpp)
add_executable(22_MidNodeInList 22_MidNodeInList.cpp  List.cpp)
add_executable(23_EntryNodeOfLoopInList 23_EntryNodeOfLoopInList.cpp List.cpp)
add_executable(Sort Sort.cpp)
add_executable(BigNumber BigNumber.cpp)